c4prj2_input/grade.txt
Grading at Tue Sep  4 22:49:35 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:49:5: error: value computed is not used [-Werror=unused-value]
     *n_hands++;
     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
